# embedding_python_in_cpp

./: CMakeLists.txt  README.md  driver.cpp  mypythonlib.py
src/: mylib.cpp  mylib.hpp  pch.hpp
tests/: CMakeLists.txt
